--- a/src/styles/caseDetail/_caseDetail.scss
+++ b/src/styles/caseDetail/_caseDetail.scss
@@ -1,12 +1,13 @@
 @import '../variable';
 
 .caseDetailContainer {
+  // background: lightblue;
   position: relative;
   width: calc(100vw - 200px);
   height: calc(100vh - 70px);
   // background: $bcgBlock;
   z-index: 20;
-  font-size: 12px;
+  font-size: clamp(12px, 1vw, 18px);
   @include flexCenter;
   .prePage {
     position: absolute;
@@ -14,7 +15,7 @@
     left: 10px;
     display: flex;
     align-items: center;
-    font-size: 14px;
+    // font-size: 14px;
     font-weight: 600;
     color: $focusClrG;
     cursor: pointer;
@@ -34,9 +35,10 @@
     }
   }
   .caseDetailContain {
+    background: lightcoral;
     position: relative;
     width: 60%;
-    height: 95%;
+    height: 98%;
     background: $mainClrW;
     padding: 0 20px;
     // border: 1px solid #ccc;
@@ -45,15 +47,37 @@
         @include flexCenter;
         border-bottom: 1px solid #ccc;
         li {
-          font-size: 16px;
+          // font-size: 16px;
           font-weight: 600;
           margin: 5px 20px;
+          white-space: nowrap;
           cursor: pointer;
           .linkPad {
             padding: 4px 15px;
           }
           .act {
             color: $focusClrG;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .caseDetailContainer {
+    width: calc(100vw - 0px);
+    .prePage {
+      opacity: 0;
+    }
+    .caseDetailContain {
+      width: 100%;
+      padding: 0 10px;
+      nav {
+        ul {
+          padding-left: 0;
+          li {
+            margin: 5px auto;
           }
         }
       }
