--- a/src/Application/_index.scss
+++ b/src/Application/_index.scss
@@ -9,7 +9,7 @@
     align-items: center;
     flex-direction: column;
 
-    @media only screen and (min-width: 576px) {
+    @media only screen and (max-width: 576px) {
       width: 100%;
     }
     @media only screen and (min-width: 576px) {
