--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -93,6 +93,7 @@
       border-top: 2px solid black;
     }
     .gapContain {
+      display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 0 5px;
