--- a/src/styles/caseDetail/_addStatePage.scss
+++ b/src/styles/caseDetail/_addStatePage.scss
@@ -7,6 +7,7 @@
   height: calc(100% - 75px);
   width: calc(100% - 40px);
   background: rgba(0, 0, 0, 0.55);
+  font-size: clamp(12px, 1vw, 18px);
   @include flexCenter;
   .addStateForm {
     position: relative;
@@ -34,14 +35,14 @@
       background: #ccc;
       margin: 15px auto;
       padding: 10px;
-      font-size: 14px;
-      textarea {
+      // font-size: 14px;
+      .remark {
         resize: none;
         width: 75%;
         @include scrollbarContain;
       }
       .selectRemind {
-        font-size: 12px;
+        // font-size: 12px;
         color: $focusClrG;
         margin-left: 5px;
       }
@@ -57,6 +58,20 @@
       transition: linear 0.2s;
       &:hover {
         box-shadow: 0.2px 0.2px 4px #777777c9;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .addStatePageContain {
+  width: calc(100% - 20px);
+
+    .addStateForm {
+      .addStateFormContain {
+        .remark {
+          // width: 65%;
+        }
       }
     }
   }
