--- a/src/CaseReport/_CaseReport.scss
+++ b/src/CaseReport/_CaseReport.scss
@@ -70,7 +70,7 @@
       .sortBtn {
         @include flexCenter;
       }
-      .tiTick{
+      .tiTick {
         color: red;
       }
     }
@@ -93,9 +93,15 @@
 }
 
 /* media queries */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
+  .caseContainer {
+    .mobileToggle {
+      display: flex;
+      justify-content: end;
+    }
+  }
   .case {
-    max-width: 600px;
+    max-width: 576px;
     margin: 0 auto;
   }
 
