--- a/src/Password/_index.scss
+++ b/src/Password/_index.scss
@@ -2,8 +2,8 @@
 
 .passWordContainer {
   margin: $marage10 0;
-  .title {
-    font-size: $navbarLeft18;
+  .contents18 {
+    font-size: $contentText18;
   }
   .btn {
     display: flex;
