--- a/src/styles/caseManagement/_caseManagement.scss
+++ b/src/styles/caseManagement/_caseManagement.scss
@@ -9,7 +9,7 @@
   height: calc(100vh - 70px);
   // margin: 0 auto;
   // padding-bottom: 30px;
-  font-size: clamp(12px, 1vw, 18px);
+  font-size:$contentText18;
   // display: flex;
   // flex-direction: column;
   .case {
@@ -46,7 +46,6 @@
       }
       th {
         padding: 10px 15px;
-        // font-size: 14px;
         .arrow {
           font-size: 2rem;
           cursor: pointer;
@@ -77,7 +76,7 @@
   }
   .noData {
     // background: lavenderblush;
-    font-size: 14px;
+    font-size: $contentText18;
     color: $focusClrG;
     text-align: center;
     .noTd {
