--- a/src/styles/caseDetail/_addStatePage.scss
+++ b/src/styles/caseDetail/_addStatePage.scss
@@ -43,7 +43,7 @@
       }
       .selectRemind {
         // font-size: 12px;
-        color: $focusClrG;
+        @include focusText;
         margin-left: 5px;
       }
     }
