--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -121,7 +121,7 @@
       margin-bottom: -10px;
       span {
         opacity: 0;
-        color: $focusClrG;
+        @include focusText;
       }
       .view {
         opacity: 1;
@@ -268,7 +268,7 @@
           }
           span {
             padding: 1px 0 0 5px;
-            color: $focusClrG;
+            @include focusText;
           }
         }
       }
