--- a/src/styles/caseDetail/_selectStatus.scss
+++ b/src/styles/caseDetail/_selectStatus.scss
@@ -29,7 +29,7 @@
     bottom: -20px;
     left: 0;
     font-size: 12px;
-    color: $focusClrG;
+    @include focusText;
   }
   .confirmBtn {
     @include submitBtn(#ccc);
